<resources>
    <string name="app_name">Campo Grande</string>
    <string name="property_name">Property Name...</string>
    <string name="address">Address...</string>
    <string name="size">Size in square meters (m^2)</string>
    <string name="price">Price in DKK</string>
    <string name="description">Description...</string>
    <string name="facilities">Facilities:</string>
    <string name="water">Water</string>
    <string name="electricity">Electricity</string>
    <string name="add">Add</string>
    <string name="facebook_app_id" translatable="false">706307326546017</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb706307326546017</string>
    <string name="or">or</string>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="continue_as_guest"><u>Want to explore first? Continue as guest</u></string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_edit">Edit host profile</string>
    <string name="action_delete">Delete host profile</string>
    <string name="action_deleteAccount">Delete account</string>
    <string name="create_user">"To access this content, please sign in or create an account"</string>
    <string name="cancel">Cancel</string>
    <string name="signinorcreate">Sign in/Create account</string>
    <string name="menu_discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="editprofile">Edit profile</string>
    <string name="reservations">My reservations</string>
    <string name="favourites">My favourites</string>
    <string name="messages">Messages</string>
    <string name="host">Host profile</string>
    <string name="listings">Host - My listings</string>
    <string name="about">About Campo Grande</string>
    <string name="signoutofapp">Sign out/Leave</string>
    <string name="accountinfo">Profile information</string>
    <string name="calendar_activity">Host - My bookings</string>
    <string name="add_new">Host - Add new listing</string>
    <string name="latin" translatable="false">Lorem ipsum dolor sit amet, brute admodum invidunt in usu, ea cum quis omnis...</string>
    <string name="latinlong" translatable="false">Lorem ipsum dolor sit amet, an duo amet discere persecuti. At modo vitae intellegebat pri, an usu mandamus voluptatum. Persius meliore scaevola has at, id saepe volumus eum, feugiat adipiscing at sea.</string>
    <string name="latinmedium" translatable="false">Lorem ipsum dolor sit amet, an duo amet discere persecuti. At modo vitae intellegebat pri, an usu mandamus voluptatum.</string>
    <string name="email_contact" translatable="false"> <u>240249@via.dk</u></string>
    <string name="phone_contact" translatable="false"> +45 12 34 56 78</string>
    <string name="hours_contact">  9AM to 7PM (Monday to Sunday)</string>
    <string name="address1"> Chr. M. Østergaardsvej 4</string>
    <string name="address2" translatable="false"> 8700 Horsens</string>
    <string name="address3"> Denmark</string>
    <string name="contact_us">Contact us</string>
    <string name="languages">Danish, English, German</string>
    <string name="city_host">Horsens</string>
    <string name="normal" translatable="false">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="visitor_faq">Visitor</string>
    <string name="host_faq">Host</string>
    <string name="collaboration">Collaboration</string>
    <string name="touch_faq">How do I get in touch with my host?</string>
    <string name="pay_faq">When do I pay and to whom?</string>
    <string name="payment_faq">What payment options are available?</string>
    <string name="check_in_faq">When can I check in?</string>
    <string name="password_reset_faq">How do I reset my password?</string>
    <string name="cancelreservation_faq">How do I cancel my reservation?</string>
    <string name="becomehost_faq">How do I become a host?</string>
    <string name="property_faq">Can I offer more than one property?</string>
    <string name="touchvisitor_faq">How do I get in touch with visitors?</string>
    <string name="meeting_faq">How do I set up a meeting with you?</string>
    <string name="touchcg_faq">How do I get in touch with you?</string>
    <string name="terms_tac">Terms and Conditions for using Campo Grande</string>
    <string name="intro_tac"><u>Introduction</u></string>
    <string name="IPR_tac"><u>Intellectual Property Rights</u></string>
    <string name="restrictions_tac"><u>Restrictions</u></string>
    <string name="yourcontent_tac"><u>Your Content</u></string>
    <string name="yourprivacy"><u>Your Privacy</u></string>
    <string name="limitation_tac"><u>Limitation of liability</u></string>
    <string name="agreetoterms"><u>By clicking "Register", you automatically agree to the terms and conditions of Campo Grande.</u></string>
    <string name="alreadyuser"><u>Already have an account? Log in here!</u></string>
    <string name="aboutcg">About Campo Grande</string>
    <string name="story">Our story</string>
    <string name="team">Our team</string>
    <string name="concept">Our concept</string>
    <string name="vision">Our vision</string>
    <string name="tac">Terms and Conditions</string>
    <string name="res_prev">Previous reservations</string>
    <string name="hostrev">Host Reviews</string>
    <string name="fblogin">Sign in with Facebook</string>
    <string name="googlelogin">Sign in with Google</string>
    <string name="signin">Sign in</string>
    <string name="register">Register</string>
    <string name="campogrande">Campo Grande</string>
    <string name="discover">Discover</string>
    <string name="property">Property details</string>
    <string name="prop_desc">Nice place to camp, close to the center</string>
    <string name="fullname">Full name</string>
    <string name="city">City</string>
    <string name="phone">"Phone number</string>
    <string name="intro">Introduce yourself: What are your hobbies? How do you travel? With motorcaravan or caravan? With whom? How often? Etc.</string>
    <string name="firebaseuserid">Firebase User ID: 123456789abc</string>
    <string name="categories">Categories</string>
    <string name="averagerating">Average rating:</string>
    <string name="noofreviews">Number of reviews: 3</string>
    <string name="rev1">Lovely property and amazing host!</string>
    <string name="rev2">Great experience!</string>
    <string name="revmonth2">April 2019</string>
    <string name="rev3">Will definitely come back!</string>
    <string name="revmonth3">March 2019</string>
    <string name="forgotpassword">I forgot my password"</string>
    <string name="slogan" translatable="false">The future of caravan camping!</string>
    <string name="joinnow">Join now!</string>
    <string name="facebook_continue">Continue with Facebook</string>
    <string name="continuegoogle">Continue with Google</string>
    <string name="resetpassword">Reset my password</string>
    <string name="desc">Family-friendly place</string>
    <string name="dates1" translatable="false">12/04 - 18/04 - 2019</string>
    <string name="prevreshost">Host: Nikolaj</string>
    <string name="loc_res1">Riis, Denmark</string>
    <string name="desc2">Camp surrounded by pretty nature</string>
    <string name="dates2" translatable="false">10/03 - 12/03 - 2019</string>
    <string name="prevrevhost1">Host: Meryl</string>
    <string name="loc_res2">Horsens, Denmark</string>
    <string name="desc3">Slow down, relax and enjoy nature</string>
    <string name="dates3" translatable="false">10/01 - 12/01 - 2019</string>
    <string name="prevrevhost2">Host: Pippi</string>
    <string name="loc_res3">Esbjerg, Denmark</string>
    <string name="welcome">Welcome to:</string>
    <string name="getstarted">Get started!</string>
    <string name="faq">FAQ</string>
    <string name="descfav1">Family-friendly place</string>
    <string name="hostfav">Host: Nikolaj</string>
    <string name="descfav2">Idyllic, peaceful campspot</string>
    <string name="hostfav2">Host: Meryl</string>
    <string name="descfav3">Camp near Legoland</string>
    <string name="hostfav3">Host: Pippi</string>
    <string name="host1" translatable="false">Meryl Streep</string>
    <string name="experience">Experience: Advanced</string>
    <string name="authenticated">Authenticated</string>
    <string name="reviews">4/5 - 3 reviews</string>
    <string name="introduction">Introduction</string>
    <string name="basicinfo">Basic Info</string>
    <string name="livesin">Lives in:</string>
    <string name="language">Languages:</string>
    <string name="additional">Additional info</string>
    <string name="localguide">Local guide</string>
    <string name="social">Social</string>
    <string name="animallover">Animal lover</string>
    <string name="mes_us1" translatable="false">Harry Potter</string>
    <string name="mes_us2" translatable="false">Meryl Streep</string>
    <string name="mes_us3" translatable="false">James Bond</string>
    <string name="mes_us4" translatable="false">Pippi Langstrømpe</string>
    <string name="mes_us5" translatable="false">Nikolaj Coster-Waldau</string>
    <string name="mes_time1">Wed 20/11/2019, 05:30 PM</string>
    <string name="mes_time2">Fri 12/07/2019, 11:22 AM</string>
    <string name="mes_time3">Sat 06/05/2019, 07:54 AM</string>
    <string name="mes_time4">Mon 29/04/2019, 03:07 PM</string>
    <string name="mes_time5">Sun 16/12/2018, 11:40 PM</string>
    <string name="res_desc1">Family-friendly place near Legoland</string>
    <string name="res_desc2">Camp surrounded by pretty nature</string>
    <string name="res_desc3">Slow down, relax and enjoy nature</string>
    <string name="dates_res1" translatable="false">20/05 - 22/05 - 2020</string>
    <string name="dates_res2" translatable="false">15/04 - 21/04 - 2020</string>
    <string name="dates_res3" translatable="false">05/03 - 10/03 - 2020</string>
    <string name="host_res1">Host: Harry</string>
    <string name="host_res2">Host: James</string>
    <string name="host_res3">Host: Pippi</string>
    <string name="confirmed">Confirmed</string>
    <string name="awaiting">Awaiting host confirmation</string>
    <string name="city_user">City</string>
    <string name="aboutme">About me</string>
    <string name="description_prop">Description</string>
    <string name="facilities1">Facilities</string>
    <string name="abouthost">About the host</string>
    <string name="facilityname">Facility name</string>
    <string name="facilityvalue">Facility value</string>
    <string name="propertytitle">Property Title</string>
    <string name="rating" translatable="false">4.5</string>
    <string name="totalratings">total ratings</string>
    <string name="price_prop" translatable="false">499 DKK</string>
    <string name="pricecut" translatable="false">599 DKK</string>
    <string name="coupon">Check availability</string>
    <string name="redeem">CHECK</string>
    <string name="propname">Property name</string>
    <string name="propertyprice">Property price</string>
    <string name="propertysize">Property size</string>
    <string name="campogrande_logo">Campo Grande Logo</string>
</resources>