<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewActivity">

    <ImageButton
        android:id="@+id/select_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:background="@drawable/add_image"
        />
    <ImageButton
        android:id="@+id/select_image1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_toEndOf="@+id/select_image"
        android:layout_marginTop="10dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:background="@drawable/add_image"
        />
    <ImageButton
        android:id="@+id/select_image2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_toEndOf="@+id/select_image1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="10dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:background="@drawable/add_image"
        />

    <EditText
        android:id="@+id/property_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_image"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/property_name"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/inputs"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/property_name"
        android:inputType="textPostalAddress"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:hint="@string/address"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/inputs"
        />

    <EditText
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:inputType="numberDecimal"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:hint="@string/size"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/inputs"
        />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/size"
        android:inputType="number"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:hint="@string/price"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/inputs"
        />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:inputType="textMultiLine"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:hint="@string/description"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/inputs"
        />
    <TextView
        android:id="@+id/facilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:text="@string/facilities"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        />

    <RadioButton
        android:id="@+id/radioWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="5dp"
        android:layout_below="@+id/facilities"
        android:text="@string/water"
        />
    <RadioButton
        android:id="@+id/radioElectricity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="45dp"
        android:layout_below="@+id/facilities"
        android:layout_toEndOf="@+id/radioWater"
        android:text="@string/electricity"
        />

    <Button
        android:id="@+id/AddButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioWater"
        android:text="@string/add"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:background="@drawable/buttons"
        />
</RelativeLayout>