<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/md_blue_100">

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:max="100"
        android:backgroundTint="@android:color/white"
        android:indeterminateTint="#1a09d6"
        android:layout_marginTop="7dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/login_appLogo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/campogrande_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/campogrande_logo">
    </ImageView>

    <LinearLayout
        android:id="@+id/linear_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/login_appLogo"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/caravanbg4"/>

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>


    <EditText
    android:id="@+id/login_email_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linear_status"
    android:background="@drawable/inputs"
    android:padding="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:hint="@string/hint_email"
    android:inputType="textEmailAddress"
    android:textSize="17sp"
    android:textStyle="bold"
        android:drawableStart="@drawable/ic_email"
        />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email_input"
        android:background="@drawable/inputs"
        android:padding="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textSize="17sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_password"/>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/login_password_input"
        android:layout_marginTop="5dp">





    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="15dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/signin"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/sign_out"
        android:textColor="@android:color/black"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginStart="80dp"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>


</RelativeLayout>