<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/md_green_100">

    <ImageView
        android:id="@+id/register_appLogo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/campogrande_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/campogrande_logo">
    </ImageView>




    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_appLogo"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_email"/>

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email_input"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_password"/>


    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password_input"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/register"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/agreetoterms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agreetoterms"
        android:layout_below="@id/register_btn"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textColor="@color/md_black_1000"/>
    <TextView
        android:id="@+id/already_user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/agreetoterms"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="bold"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/alreadyuser"
        android:textColor="@color/colorPrimaryDark"
        />

    <ImageView
        android:layout_below="@id/already_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/caravanbg5"/>


    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:max="100"
        android:backgroundTint="@android:color/white"
        android:indeterminateTint="#1a09d6"
        android:layout_marginTop="7dp"
        android:visibility="invisible"/>




    </RelativeLayout>

